SAK-17675 prep for indie release.
git-svn-id: https://source.sakaiproject.org/svn/polls/trunk@71345 66ffb92e-73f9-0310-93c1-f5514f145a0a